fix wfprev-441.442 (#621).  display yyyy/yy as fiscal year in confirmation dialog. Left align the text (#622)

--- a/client/wfprev-war/src/main/angular/src/app/components/create-new-project-dialog/create-new-project-dialog.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/create-new-project-dialog/create-new-project-dialog.component.scss
@@ -39,7 +39,7 @@
 }
 
 .dialog-content{
-  padding: 20px;
+  padding: 24px;
   .form-row {
     display: flex;
     gap: 20px;
